# navius

./: .gitignore  Cargo.toml  LICENSE  README.es.md  README.md  clickable.yaml  compilar_solo_mimic.sh  manifest.json  navius.apparmor  navius.content-hub  navius.desktop  navius.url-dispatcher  snapcraft.yaml
assets/: gen_alerta_icons.py  navius_autostart_test_alertas.json
bridge/: install.sh  navius-sat-bridge-hal.c  navius-sat-bridge.py  navius-sat-bridge.service
docs/: developer.en.md  developer.es.md  philosophy.en.md  philosophy.es.md  user.en.md  user.es.md
po/: ar.po  ca.po  de.po  en.po  eu.po  fa.po  fr.po  it.po  navius.woodyst.pot  pt.po  ru.po  zh.po
qml/: AboutDialog.qml  AlertasOverlay.qml  BtnLabel.qml  CompassWidget.qml  GoogleMapsPanel.qml  GpsSource.qml  HelpPanel.qml  InstructionListPanel.qml  LoginPanel.qml  Main.qml  MediaPanel.qml  MediaWidget.qml  MessagesPanel.qml  MsgDetailPopup.qml  NavAlerts.js  NavBar.qml  NavMessages.js  NavSearch.js  NavSettings.js  NaviusLogo.qml  OfflineBanner.qml  OsmScoutDialog.qml  ParkingDialog.qml  PreferencesPanel.qml  RouteRestoreDialog.qml  RouteSelectPanel.qml  RouteViewPanel.qml  SatelliteView.qml  SearchPanel.qml  ServerFallbackDialog.qml  SharedLocationDialog.qml  SimRoute.js  SimTestRoutes.js  SpeedView.qml  StopTodoPanel.qml  TodoDB.js  TourOverlay.qml  TrafficRouteDialog.qml  TripSharePanel.qml  TtsVoicesPanel.qml  (+3 more)
src/: build.rs  libpcaudio_stub.c  libpiper_limit.c  location_props.cpp  location_props.h  main.rs  nav_http.rs  nav_music.rs  nav_tracker.rs  nav_tts.rs  qrc.rs  satellite_model.rs  (+1 more)
(+3 files in other folders)
